# pctx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  dist-workspace.toml  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yml
crates/codegen/: Cargo.toml
crates/codegen/src/: case.rs  format.rs  lib.rs  schema_type.rs  utils.rs
crates/codegen/src/typegen/: mod.rs  schema_data.rs  type_signature.rs  types.handlebars
crates/codegen/tests/: typegen.rs
crates/codegen/tests/fixtures/typegen/: basic_optional.yml  basic_required.yml  union_any_of.yml  union_one_of.yml  union_type_array.yml
crates/codegen/tests/snapshots/: typegen__test_basic_optional.ts.snap  typegen__test_basic_required.ts.snap  typegen__test_union_any_of.ts.snap  typegen__test_union_one_of.ts.snap  typegen__test_union_type_array.ts.snap
crates/deno_executor/: Cargo.toml  build.rs
crates/deno_executor/js/: setup.js
crates/deno_executor/src/: deno_execute.rs  lib.rs  ts_go_check.rs
crates/deno_executor/src/tests/: default_export_capture.rs  diagnostic_filtering.rs  mcp_client_usage.rs  mod.rs  output_capture.rs  permissions.rs  runtime_execution.rs  type_checking.rs
crates/deno_transpiler/: Cargo.toml
crates/pctx/: Cargo.toml
crates/pctx/src/: cli.rs  lib.rs
crates/pctx/src/commands/: add.rs  init.rs  list.rs  mcp_add.rs  mcp_auth.rs  remove.rs  start.rs
crates/pctx/src/mcp/: auth.rs  client.rs  config.rs  mod.rs  token_resolver.rs  tools.rs  upstream.rs
crates/pctx/src/utils/: ascii-logo.txt  logger.rs  mod.rs  styles.rs
crates/pctx_code_execution_runtime/: Cargo.toml  README.md  build.rs
crates/pctx_code_execution_runtime/src/: error.rs  fetch.rs  js_error_impl.rs  lib.rs  mcp_client.rs  ops.rs  registry.rs  runtime.js
crates/pctx_code_execution_runtime/src/tests/: mcp_registry.rs  mod.rs  runtime_integration.rs
crates/pctx_config/: Cargo.toml
crates/pctx_config/src/: server.rs
crates/pctx_runtime/examples/: basic_usage.rs
crates/pctx_runtime/src/: mcp_client.rs
crates/pctx_runtime/src/tests/: runtime_integration.rs
crates/pctx_type_check_runtime/: Cargo.toml  README.md  build.rs
crates/pctx_type_check_runtime/src/: ignored_codes.rs  lib.rs  type_check_runtime.js  type_check_runtime_generated.js  typescript_wrapper.js
crates/ptx/: Cargo.toml
crates/ptx/src/: cli.rs  utils.rs
crates/ptx/src/commands/: ctx.json  dev.rs  init.rs  mcp_add.rs  mcp_auth.rs  mcp_get.rs  mcp_list.rs  mcp_remove.rs  mod.rs  start.rs
crates/ptx/src/mcp/: auth.rs  client.rs  config.rs  deno_pool.rs  mod.rs  token_resolver.rs  tools.rs  upstream.rs
crates/rust_js_sync_codegen/: Cargo.toml  README.md
crates/rust_js_sync_codegen/src/: lib.rs
crates/sdk_runner/: Cargo.toml
crates/sdk_runner/js/: mcp-client.min.mjs
crates/sdk_runner/src/: deno_execute.rs  lib.rs  ts_go_check.rs
crates/sdk_runner/src/tests/: default_export_capture.rs  diagnostic_filtering.rs  mod.rs  output_capture.rs  runtime_execution.rs  type_checking.rs  zod_validation.rs
docs/: CLI.md  auth-examples.md  code-mode.md  mcp-auth.md  upstream-mcp-servers.md
examples/nasa-mcp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  nasa-mcp-server.js  package-lock.json  package.json  pctx.json  start-local.js  start.sh
examples/notion-mcp/: pctx-notion.json  start-local.js
scripts/: generate-cli-docs.sh  update-mcp-client.py
