[package]
name = "codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
heck = "0.5.0"
indexmap = "1.2"
schemars = { version = "0.8.22", features = ["preserve_order"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = { workspace = true }
unicode-ident = "1.0.22"


[dev-dependencies]
insta = "1.43.2"
