[package]
name = "deno_executor"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_runtime = { version = "0.229.0", features = ["transpile", "hmr"] }
deno_resolver = "0.52.0"
node_resolver = "0.59.0"
sys_traits = "0.1"
deno_transpiler = { path = "../deno_transpiler" }
tempfile = "3.14"
regex = "1.11"
thiserror = { workspace = true }
tokio = { version = "1.41", features = ["rt", "macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }

[build-dependencies]
# No dependencies needed - binaries are committed to git

[lints]
workspace = true
