[package]
name = "pctx_code_execution_runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
pctx_config = { path = "../pctx_config" }
deno_core = { version = "0.363.0", features = ["include_icu_data"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = { workspace = true }
anyhow = "1.0"
deno_error = "0.7"
url = "2.5"
rmcp = "0.8.0"

[build-dependencies]
deno_core = { version = "0.363.0", features = ["include_icu_data"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
deno_error = "0.7"

[dev-dependencies]
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[lints]
workspace = true
