[package]
name = "pctx_config"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
indexmap = { version = "2.12.0", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.41", features = ["macros", "rt", "process"] }
url = { version = "^2.5", features = ["serde"] }
keyring = { version = "3.6.1", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
log = "0.4.28"
camino = { version = "1.2.1", features = ["serde1"] }
rmcp = { version = "0.8.0", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
reqwest = { version = "0.12", features = ["json"] }
thiserror.workspace = true
http = "1.3.1"


[build-dependencies]


[lints]
workspace = true
