[package]
name = "pctx_type_check_runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Isolated TypeScript type checking runtime for PCTX"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
deno_core = { version = "0.363.0", features = ["include_icu_data"] }
deno_ast = "0.51.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
once_cell = "1.20"
futures = "0.3"

[build-dependencies]
deno_core = { version = "0.363.0", features = ["include_icu_data"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
rust_js_sync_codegen = { path = "../rust_js_sync_codegen" }

[dev-dependencies]
tokio = { version = "1.41", features = ["rt", "macros"] }

[lints]
workspace = true
