[package]
name = "ptx"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/portofcontext/ptx"
default-run = "ptx"

[[bin]]
name = "ptx"
path = "src/cli.rs"

[dependencies]
deno_executor = { path = "../deno_executor" }
codegen = { path = "../codegen" }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
rmcp = { version = "0.8.0", features = [
    "server",
    "client",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "reqwest",
    "macros",
    "schemars",
    "auth",
] }
axum = { version = "0.8", features = ["macros"] }
serde = "1.0.228"
indexmap = { version = "2.12.0", features = ["serde"] }
serde_json = "1.0.145"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "process",
] }
toml = "0.9.8"
keyring = "3.6"
dialoguer = "0.12.0"
dirs = "6.0.0"
anyhow = "1.0"
thiserror = { workspace = true }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
open = "5.3"
oauth2 = "5.0"
url = "2.5"
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }

[target.'cfg(all(not(target_env = "msvc"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.43"

[lints]
workspace = true

[package.metadata.dist]
dist = true
